2006-10-18  Bruno Haible  <bruno@clisp.org>

	* read-po.h (input_format_po): Mark as DLL_VARIABLE.
	* read-properties.h (input_format_properties): Likewise.
	* read-stringtable.h (input_format_stringtable): Likewise.
	* write-po.h (output_format_po): Likewise.
	* write-properties.h (output_format_properties): Likewise.
	* write-stringtable.h (output_format_stringtable): Likewise.

2006-10-16  Bruno Haible  <bruno@clisp.org>

	* gettext-po.h.in: Move to ../libgettextpo/.
	* gettext-po.c: Move to ../libgettextpo/.
	* Makefile.am (lib_LTLIBRARIES): Remove libgettextpo.la.
	(nodist_include_HEADERS): Remove variable.
	(libgettextpo_la_SOURCES, LTV_CURRENT, LTV_REVISION, LTV_AGE,
	libgettextpo_la_LDFLAGS, libgettextpo_la_DEPENDENCIES,
	libgettextpo_la_LDFLAGS): Remove variables.
	(EXTRA_DIST, BUILT_SOURCES, CLEANFILES): Remove gettext-po.h support.
	(gettext-po.h): Remove rule.

2006-10-18  Bruno Haible  <bruno@clisp.org>

	* po-error.h (__attribute__, __format__, __printf__): New macros.
	(po_error, po_error_at_line): Declare format string argument.
	* po-lex.h (__attribute__, __format__, __printf__): New macros.
	(po_gram_error, po_gram_error_at_line): Declare format string argument.

	* msgl-cat.c (catenate_msgdomain_list): Avoid "gcc -Wshadow" warning.
	* msgl-check.c (formatstring_error_logger): Avoid "gcc
	-Wmissing-format-attribute" warning.
	(check_pair): Avoid "gcc -Wshadow" warning.

	* read-stringtable.c (stringtable_parse): Pass a mutable string as
	msgstr to po_callback_message.
	* write-po.c (msgdomain_list_print_po): Avoid "gcc -Wwrite-strings"
	warning.
	* xgettext.c (remember_a_message_plural): Free a temporary string
	after use.

2006-10-17  Bruno Haible  <bruno@clisp.org>

	* lang-table.c (language_table): Add the most important languages that
	have an ISO 639-2 code.
	* msginit.c (catalogname_for_locale): Likewise.

2006-10-15  Bruno Haible  <bruno@clisp.org>

	* read-catalog-abstract.h (input_syntax_ty): Remove type.